--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,25 +2,32 @@
    <div id="dashboard-detail">
       <%= render :partial => 'filter' %>
       <%= render :partial => 'queue_status' %>
-      <table id="detail-table">
-         <thead>
-            <tr>
-               <th class="check-col"></th>
-               <th class="icon-col"></th>
-               <th class="icon-col"></th>
-               <th class="medium-col">TCP Number</th>
-               <th>Title</th>
-               <th class="author-col">Author</th>
-               <th class="date-col">OCR Date</th>               
-               <th class="medium-col">OCR Engine</th>
-               <th class="author-col">OCR Batch</th>
-               <th class="result-col">Juxta</th>
-               <th class="result-col">RETAS</th>
-            </tr>
-         </thead>
-         <tbody>
-         </tbody>
-      </table>
+      <div style="clear: both"></div>
+      
+      <div id="table-div">
+         <input type="button" id="select-all" value="Select All" />
+         <table id="detail-table">
+            <thead>
+               <tr>
+                  <th class="check-col"></th>
+                  <th class="icon-col"></th>
+                  <th class="icon-col"></th>
+                  <th class="narrow-col">Data Set</th>
+                  <th class="icon-col">ID</th>
+                  <th class="medium-col">TCP Number</th>
+                  <th>Title</th>
+                  <th class="author-col">Author</th>
+                  <th class="date-col">OCR Date</th>               
+                  <th class="medium-col">OCR Engine</th>
+                  <th class="author-col">OCR Batch</th>
+                  <th class="result-col">Juxta</th>
+                  <th class="result-col">RETAS</th>
+               </tr>
+            </thead>
+            <tbody>
+            </tbody>
+         </table>
+      </div>
    </div>
 </div>
 
