--- a/app/views/common/_pick_batch_popup.html.erb
+++ b/app/views/common/_pick_batch_popup.html.erb
@@ -14,4 +14,5 @@
       <tr><td class="table-label">Parameters:</td><td><span class="table-data" id="batch-params"></span></td></tr>
       <tr><td class="table-label" style="vertical-align: text-top;">Notes:</td><td><span class="table-data" id="batch-notes"></span></td></tr>
    </table>
+   <span id="work-id-list" style="display: none"></span>
 </div>
