--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -1,23 +1,42 @@
 <div id="dashboard-filter">
    <div id="filter-header">Results Filter</div>
-   <p>
-      <input type="checkbox" id="require-ocr" <% if @ocr_filter %>checked<% end %>>
-      <span class="cb-filter-label">Exclude works with no OCR results</span>
-   </p>
-   <p>
-      <span class="filter-label">Batch:</span>
-      <select id="batch-filter" name="batch-filter">
-         <option value>All</option>
-         <% @batches.each do | batch | %>
-            <option value="<%= batch[:id] %>" <% if @batch_filter.to_i==batch[:id] %>selected<%end%> ><%= batch[:name] %></option>
-         <% end %>
-      </select>
-   </p>
-   <p>
-      <span class="filter-label">From:</span>
-      <input class="date-filter" type="text" id="from-date" value="<%= @from_filter %>"/>
-      <span class="filter-label">To:</span>
-      <input class="date-filter" type="text" id="to-date"  value="<%= @to_filter %>"/>
-   </p>
-   <input id="filter-reset" type="button" value="Reset Filter"/>
+   
+   <div id='filter-left'>
+      <p>
+         <input type="checkbox" id="require-gt" <% if @gt_filter %>checked<% end %>>
+         <span class="cb-filter-label">Exclude works with no GT</span>
+      </p>
+      <p>
+         <input type="checkbox" id="require-ocr" <% if @ocr_filter %>checked<% end %>>
+         <span class="cb-filter-label">Exclude works with no OCR results</span>
+      </p>
+      <p>
+         <span class="filter-label">Data Set:</span>
+         <select id="set-filter" name="set-filter" style="width: 192px;">
+            <option value>All</option>
+            <option value="ECCO" <% if @set_filter=="ECCO" %>selected<%end%> >ECCO</option>
+            <option value="EEBO" <% if @set_filter=="EEBO" %>selected<%end%> >EEBO</option>
+         </select>
+      </p>
+      <p>
+         <span class="filter-label">Batch:</span>
+         <select id="batch-filter" name="batch-filter">
+            <option value>All</option>
+            <% @batches.each do | batch | %>
+               <option value="<%= batch[:id] %>" <% if @batch_filter.to_i==batch[:id] %>selected<%end%> ><%= batch[:name] %></option>
+            <% end %>
+         </select>
+      </p>
+   </div>
+   
+   <div id='filter-right'>
+      <p class="filter-label" style="margin-top:10px">OCR completed date:</p>
+      <p>
+         <span class="filter-label">From:</span>
+         <input class="date-filter" type="text" id="from-date" value="<%= @from_filter %>"/>
+         <span class="filter-label">To:</span>
+         <input class="date-filter to" type="text" id="to-date"  value="<%= @to_filter %>"/>
+      </p>
+      <input id="filter-reset" type="button" value="Reset Filter"/>
+   </div>
 </div>
