killed the pick batch popup and always create new batches. added some error checking. create json data for the batch post, but not posted yet

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -204,6 +204,15 @@
    margin-bottom: 10px;
 }
 .emop-popup {
+   #new-batch-error {
+      margin: 2px;
+      text-align: center;
+      font-style: italic;
+      color: #d22;
+      font-weight: bold;
+      display: none;
+   }
+   
    font-size: 0.8em;
    input {
       font-size: 0.9em;
