--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -91,7 +91,7 @@ a.paginate_disabled_previous {
          margin-bottom: 6px;
       }
       
-      #schedule-selected {
+      #schedule-selected, #schedule-all {
         float: right;   
       }
    }
