--- a/app/views/dashboard/_queue_status.html.erb
+++ b/app/views/dashboard/_queue_status.html.erb
@@ -7,6 +7,6 @@
       <tr><td class="summary-label">Failed:</td><td><%= @failed_jobs %></td></tr>
    </table>
    <input type="button" id="schedule-selected" value="Schedule Selected" />
-   <input type="button" id="schedule-selected" value="Schedule All Matching Works" />
+   <input type="button" id="schedule-all" value="Schedule All Matching Works" />
 
 </div>
