selected works get all pages scheduled

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -234,6 +234,7 @@
       text-align: right;
       font-weight: 300;
       width: 110px;
+      font-size: 0.9em;
    }
    .table-data {
       font-size: 0.85em;
