--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -16,11 +16,13 @@
    <table id="pages-table">
       <thead>
          <tr>
+            <th class="check-col"></th>
+            <th class="icon-col"></th>
+            <th class="icon-col"></th>
             <th class="icon-col"></th>
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
-            <th class="result-col">Page Image</th>
          </tr>
       </thead>
       <tbody>
