--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -11,8 +11,13 @@
 
 <div id="results-detail">
    
+   <div>
    <a class="dashboard-back" href="/"><< Back To Dashboard</a>
-
+   </div>
+   <div style="margin: 10px;">
+   <input type="button" id="select-all-pages" value="Select All" />
+   </div>
+   
    <table id="pages-table">
       <thead>
          <tr>
