--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,6 +17,7 @@
                   <th class="medium-col">TCP Number</th>
                   <th>Title</th>
                   <th class="author-col">Author</th>
+                  <th class="medium-col">Font</th>
                   <th class="date-col">OCR Date</th>               
                   <th class="medium-col">OCR Engine</th>
                   <th class="author-col">OCR Batch</th>
