schedule page batches

--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -17,7 +17,7 @@
             <span id="no-fonts" style="display:none">No fonts defined</span>
          </td>
       </tr>
-      <%= render :partial => 'font_detail_row' %>
+      <%= render :partial => '/common/font_detail_row' %>
       
       <tr><td class="table-label">Parameters:</td><td><input type="text" id="new-params"/></td></tr>
       <tr><td class="table-label" style="vertical-align: text-top;">Notes:</td><td><textarea id="new-notes"></textarea></td></tr>
