--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -16,6 +16,7 @@
    </div>
    <div style="margin: 10px;">
    <input type="button" id="select-all-pages" value="Select All" />
+   <input type="button" id="schedule-pages" value="Schedule Selected" />
    </div>
    
    <table id="pages-table">
@@ -38,5 +39,8 @@
 
 </div>
 
+<span id="types-json" style="display: none"><%= ActiveSupport::JSON.encode( @job_types ) %></span>
+<span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
+<span id="fonts-json" style="display: none"><%= ActiveSupport::JSON.encode( @fonts ) %></span>
 <%= render :partial => '/common/wait_popup' %>
-   
+<%= render :partial => '/common/new_batch_popup' %>
