--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
       </div>
 
       <%= yield %>
+      
+      <span id="types-json" style="display: none"><%= ActiveSupport::JSON.encode( @job_types ) %></span>
+      <span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
+      <span id="batch-json" style="display: none"><%= ActiveSupport::JSON.encode( @batches ) %></span>
+      <span id="fonts-json" style="display: none"><%= ActiveSupport::JSON.encode( @fonts ) %></span>
 
    </body>
 </html>
