--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -144,8 +144,11 @@ a.paginate_disabled_previous {
       }
       #filter-reset {
          position: relative;
-         left: 183px;
-         top: 24px;
+         left: 190px;
+         top: 3px;
+      }
+      #print-font-filter {
+         width: 182px;
       }
    }
    #table-div {
