--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -15,7 +15,7 @@
                   <th class="narrow-col">Data Set</th>
                   <th class="icon-col">ID</th>
                   <th class="medium-col">TCP Number</th>
-                  <th>Title</th>
+                  <th class="title-col">Title</th>
                   <th class="author-col">Author</th>
                   <th class="medium-col">Font</th>
                   <th class="date-col">OCR Date</th>               
