--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,9 @@
       <span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
       <span id="batch-json" style="display: none"><%= ActiveSupport::JSON.encode( @batches ) %></span>
 
+      
+      <%= render :partial => '/common/new_batch_popup' %>
+      <%= render :partial => '/common/new_font_popup' %>
+      <%= render :partial => '/common/wait_popup' %>
    </body>
 </html>
