--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -196,6 +196,7 @@
 .ui-dialog-titlebar {
    font-size: 0.8em;
    font-weight: 400;
+   padding: 2px 0 2px 8px !important;
 }
 .ui-button-text {
    font-size: 0.7em !important;
@@ -211,8 +212,12 @@
 }
 .emop-popup {
    #font-name {
-      width: 100%;
+      width: 260px;
       margin: 10px 0;
+      font-size: 0.85em;
+   }
+   label {
+      font-size: 0.9em;
    }
    
    #new-batch-error {
