--- a/app/views/common/_new_font_popup.html.erb
+++ b/app/views/common/_new_font_popup.html.erb
@@ -1,5 +1,6 @@
 <div id="new-font-popup" class="emop-popup" title="Upload Font">
    <%= form_tag( {:controller => "fonts" }, :id => 'font-upload-form', :enctype=>"multipart/form-data" ) do %>
+      <label for="font-name">Name:</label>
       <input id="font-name" type="text" name="font-name"/>
       <input id="font-file" type="file" name="file"/>
    <% end %>
