added abiity to view ocr text results. useful for cases with no GT - its the only way to see the results from the dashboard

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -26,6 +26,7 @@
             <th class="icon-col"></th>
             <th class="icon-col"></th>
             <th class="icon-col"></th>
+            <th class="icon-col"></th>
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
@@ -36,5 +37,5 @@
    </table>
    
    <a  class="dashboard-back"  href="/"><< Back To Dashboard</a>
-
+   <%= render :partial => 'txt_viewer_popup' %>
 </div>
