--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -23,6 +23,19 @@ a.dashboard-back {
 #results-detail {
    padding:10px;
    
+   .juxta-link {
+      height:16px;
+      width:32px;
+      background-image: image-url("sbs.png");
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      cursor: pointer;
+   }
+   .disabled {
+      background-position: 0 -16px !important;
+      cursor: default !important;
+   }
+   
    #pages-table {
       font-size: 0.9em;
       border-spacing: 1px;
@@ -47,9 +60,28 @@ a.dashboard-back {
    .page-view {
       height:16px;
       width:16px;
-      background-image: image-url("page.png");
+      background-image: image-url("tiff.png");
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      cursor: pointer;
+   }
+   .ocr-txt {
+      height:16px;
+      width:16px;
+      background-image: image-url("txt.png");
       background-repeat: no-repeat;
       background-position: 0 0;
       cursor: pointer;
    }
 }
+
+#ocr-text-display {
+   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+   box-sizing: border-box;         /* Opera/IE 8+ */
+   width: 100%;
+   height: 96%;
+   margin: 2% 0;
+   outline: 0;
+}
+   
