icons for scanned image

--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -60,7 +60,7 @@ a.dashboard-back {
    .page-view {
       height:16px;
       width:16px;
-      background-image: image-url("tiff.png");
+      background-image: image-url("tiff3.png");
       background-repeat: no-repeat;
       background-position: 0 0;
       cursor: pointer;
