added page number display to text popup

--- a/app/views/results/_txt_viewer_popup.html.erb
+++ b/app/views/results/_txt_viewer_popup.html.erb
@@ -1,3 +1,7 @@
 <div id="ocr-view-popup" class="emop-popup" title="OCR Text Results">
+   <div>
+      <span>Page Number:</span>
+      <span id="ocr-page-num"></span>
+   </div>
    <textarea id="ocr-text-display" readonly></textarea>  
 </div>
