--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -104,6 +104,7 @@
 }
 .status-icon.error {
    background-position: 0 -32px;
+   cursor: pointer;
 }
 .status-icon.idle {
    background-position: 0 0px;
