stubbed in better framework for displaying page ocr errors

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -38,4 +38,5 @@
    
    <a  class="dashboard-back"  href="/"><< Back To Dashboard</a>
    <%= render :partial => 'txt_viewer_popup' %>
+   <%= render :partial => 'error_popup' %>
 </div>
