display error messages per page

--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -75,6 +75,10 @@ a.dashboard-back {
    }
 }
 
+#error-page {
+   margin: 8px;
+}
+
 #ocr-text-display {
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
