refactor font code. allow print font to be set from pages view as well as dashboard view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
       
       <%= render :partial => '/common/new_batch_popup' %>
       <%= render :partial => '/common/new_font_popup' %>
+      <%= render :partial => '/common/set_font_popup' %>
       <%= render :partial => '/common/wait_popup' %>
    </body>
 </html>
