--- a/app/views/common/_new_font_popup.html.erb
+++ b/app/views/common/_new_font_popup.html.erb
@@ -1,7 +1,7 @@
 <div id="new-font-popup" class="emop-popup" title="Upload Font">
-   <%= form_tag( {:controller => "fonts" }, :id => 'font-upload-form', :enctype=>"multipart/form-data" ) do %>
+   <form id="font-upload-form" action="fonts/training_font" method="post" enctype="multipart/form-data">
       <label for="font-name">Name:</label>
       <input id="font-name" type="text" name="font-name"/>
       <input id="font-file" type="file" name="file"/>
-   <% end %>
+   </form>
 </div>
