--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -17,6 +17,7 @@
    <div style="margin: 10px;">
    <input type="button" id="select-all-pages" value="Select All" />
    <input type="button" id="schedule-pages" value="Schedule Selected" />
+   <input type="button" id="set-work-font" value="Set Print Font for Work" />
    </div>
    
    <table id="pages-table">
