--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -5,7 +5,8 @@
 <div id="results-summary">
    <table id="results-summary">
       <tr><td class="summary-label">Work:</td><td><%= @work_title %></td></tr>
-      <tr><td class="summary-label">Batch:</td><td><%= @batch %></td></tr>     
+      <tr><td class="summary-label">Batch:</td><td><%= @batch %></td></tr>    
+      <tr><td class="summary-label">Print Font:</td><td><span id="work-print-font"><%= @print_font %></span></td></tr>     
    </table>
 </div>
 
