--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -15,8 +15,9 @@ a.dashboard-back {
 
    .summary-label {
       text-align: right;
-      padding-right: 10px;
+      padding-right: 5px;
       font-weight: 500;
+      width: 65px;
    }
 }
 
