reschedule failed pages. fixed sql to show pages that are scheduled but have no results

--- a/app/views/dashboard/_work_errors_popup.html.erb
+++ b/app/views/dashboard/_work_errors_popup.html.erb
@@ -6,5 +6,5 @@
    </div>
    <div id="work-error-messages">
    </div>
-   <input type="button" id="reschedule-work" style="float: right" value="Reschedule Work"/>
+   <input type="button" id="reschedule-work" style="float: right;width:auto" value="Reschedule Work"/>
 </div>
