--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -41,4 +41,5 @@
    <a  class="dashboard-back"  href="/"><< Back To Dashboard</a>
    <%= render :partial => 'txt_viewer_popup' %>
    <%= render :partial => 'error_popup' %>
+   <%= render :partial => 'resubmit_confirm_popup' %>
 </div>
