moved reschedule confirm to common and reqorked results reschedule to use common logic. ready to add similar logic to dashboard.
fixed handling of new batch create from results page; it switches view to show the newly created batch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
       <span id="batch-json" style="display: none"><%= ActiveSupport::JSON.encode( @batches ) %></span>
 
-      
+      <%= render :partial => '/common/resubmit_confirm_popup' %>
       <%= render :partial => '/common/new_batch_popup' %>
       <%= render :partial => '/common/new_font_popup' %>
       <%= render :partial => '/common/set_font_popup' %>
