--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -209,6 +209,11 @@ a.paginate_disabled_previous {
          z-index: 1000;
          width: 80px;
       }
+      #schedule-selected {
+         position:relative;
+         top:22px;
+         z-index: 1000;
+      }
       #font-all {
          position:relative;
          top:22px;
