--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,6 +6,7 @@
       
       <div id="table-div">
          <input type="button" id="select-all" value="Select All" />
+         <input type="button" id="schedule-selected" value="Schedule Selected" />
          <input type="button" id="font-all" value="Set Print Font for Selected Works" />
          <table id="detail-table">
             <thead>
