giant rework of resubmit logic to allow it to work on works or pages. needs testing

--- a/app/views/common/_new_batch_popup.html.erb
+++ b/app/views/common/_new_batch_popup.html.erb
@@ -24,6 +24,6 @@
       <tr><td class="table-label">Parameters:</td><td><input type="text" id="new-params"/></td></tr>
       <tr><td class="table-label" style="vertical-align: text-top;">Notes:</td><td><textarea id="new-notes"></textarea></td></tr>
    </table>   
-   <span id="work-id-list" style="display: none"></span>
+   <span id="batch-json" style="display: none"></span>
    
 </div>
