--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -74,6 +74,14 @@ a.dashboard-back {
       background-position: 0 0;
       cursor: pointer;
    }
+   .ocr-hocr {
+      height:16px;
+      width:16px;
+      background-image: image-url("xml.png");
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      cursor: pointer;
+   }
 }
 
 #page-error-message {
@@ -85,7 +93,7 @@ a.dashboard-back {
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
    width: 100%;
-   height: 92%;
+   height: 90%;
    margin: 2% 0;
    outline: 0;
 }
