--- a/app/views/results/_txt_viewer_popup.html.erb
+++ b/app/views/results/_txt_viewer_popup.html.erb
@@ -1,7 +1,6 @@
-<div id="ocr-view-popup" class="emop-popup" title="OCR Text Results">
+<div id="ocr-view-popup" class="emop-popup" title="OCR Results">
    <div>
-      <span>Page Number:</span>
-      <span id="ocr-page-num"></span>
+      <span id="result-type"></span> results for page number: <span id="ocr-page-num"></span>
    </div>
    <textarea id="ocr-text-display" readonly></textarea>  
 </div>
