--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -29,6 +29,7 @@
             <th class="icon-col"></th>
             <th class="icon-col"></th>
             <th class="icon-col"></th>
+            <th class="icon-col"></th>
             <th class="result-col">Page Number</th>
             <th class="result-col">Juxta</th>
             <th class="result-col">RETAS</th>
