--- a/app/views/results/_txt_viewer_popup.html.erb
+++ b/app/views/results/_txt_viewer_popup.html.erb
@@ -3,4 +3,5 @@
       <span id="result-type"></span> results for page number: <span id="ocr-page-num"></span>
    </div>
    <textarea id="ocr-text-display" readonly></textarea>  
+   <span id="tgt-result-id" style="display:none"></span>
 </div>
