partial work on schedule all. js view and most of the controller code works; sql to get pages for works is broken

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -209,11 +209,11 @@ a.paginate_disabled_previous {
          z-index: 1000;
          width: 80px;
       }
-      #schedule-selected {
+      #schedule-selected, #schedule-all {
          position:relative;
          top:22px;
          z-index: 1000;
-      }
+      } 
       #font-all {
          position:relative;
          top:22px;
