dropdown label changed from Batch -> OCR Batch

--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -25,7 +25,7 @@
          </select>
       </p>
       <p>
-         <span class="filter-label">Batch:</span>
+         <span class="filter-label">OCR Batch:</span>
          <select id="batch-filter" name="batch-filter">
             <option value>All</option>
             <% @batches.each do | batch | %>
