only load juxta js & css when viewing the juxta page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,15 @@
       <%= javascript_include_tag "application" %>
       <%= csrf_meta_tags %>
 
-      <!-- JUXTA WS integration -->
-      <link href="<%= Settings.juxta_ws_url %>/stylesheets/sidebyside.css" rel="stylesheet" type="text/css">
-      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/jquery.mousewheel.min.js"></script>
-      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/juxta-ws-common.js"></script>
-      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/raphael-min.js"></script>
-      <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/sidebyside.js"></script>
-
+      <% if !@juxta.nil? && @juxta == true %>
+         <!-- JUXTA WS integration -->
+         <link href="<%= Settings.juxta_ws_url %>/stylesheets/sidebyside.css" rel="stylesheet" type="text/css">
+         <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/jquery.mousewheel.min.js"></script>
+         <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/juxta-ws-common.js"></script>
+         <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/raphael-min.js"></script>
+         <script type="text/javascript" src="<%= Settings.juxta_ws_url %>/javascripts/sidebyside.js"></script>
+      <% end %>
+      
    </head>
    <body>
 
@@ -24,6 +26,9 @@
 
       <%= yield %>
       
+      <% if !@juxta.nil? && @juxta == true %>
+         <span id="juxta-loaded" style="display: none">true</span>
+      <% end %>
       <span id="types-json" style="display: none"><%= ActiveSupport::JSON.encode( @job_types ) %></span>
       <span id="engines-json" style="display: none"><%= ActiveSupport::JSON.encode( @engines ) %></span>
       <span id="batches-json" style="display: none"><%= ActiveSupport::JSON.encode( @batches ) %></span>
