fix column ordering

--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -52,6 +52,7 @@
          <span class="filter-label">To:</span>
          <input class="date-filter to" type="text" id="to-date"  value="<%= @to_filter %>"/>
       </p>
-      <input id="filter-reset" type="button" value="Reset Filter"/>
+      <input id="filter-apply" class="filter-btn" type="button" value="Apply Filter"/>
+      <input id="filter-reset" class="filter-btn" type="button" value="Reset Filter"/>
    </div>
 </div>
