--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -161,10 +161,11 @@ a.paginate_disabled_previous {
       .date-filter.to {
          margin-right: 3px;
       }
-      #filter-reset {
+      .filter-btn {
+         float: right;
+         margin-right: 5px;
          position: relative;
-         left: 190px;
-         top: 3px;
+         top: 5px;
       }
       #print-font-filter {
          width: 182px;
