--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -22,8 +22,8 @@
                   <th class="author-col">Author</th>
                   <th class="medium-col">Font</th>
                   <th class="date-col">OCR Date</th>               
-                  <th class="medium-col">OCR Engine</th>
-                  <th class="author-col">OCR Batch</th>
+                  <th class="medium-col ocr-sched-col">OCR Engine</th>
+                  <th class="author-col ocr-sched-col">OCR Batch</th>
                   <th class="result-col">Juxta</th>
                   <th class="result-col">RETAS</th>
                </tr>
