--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -122,6 +122,11 @@ a.paginate_disabled_previous {
       padding: 5px 0 5px 8px;
       background-color: #ededed;
       
+      .not-applied {
+         font-style: italic;
+         font-weight: 600 !important;
+      }
+      
       #filter-left {
          float: left;
       }
