Add export to csv; remove inefficient Font query.

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -228,6 +228,12 @@ a.paginate_disabled_previous {
          top:22px;
          z-index: 1000;
       }
+	   form {
+		   position: relative;
+		   top: 22px;
+		   z-index: 1000;
+		   display: inline;
+	   }
       #detail-table_length {
         margin-left: 10px;
         float: right;
