Add ingested display and filter capability

--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -13,6 +13,7 @@
             <option value="ocr_none" <% if @ocr_filter=="ocr_none" %>selected<%end%> >No OCR</option>
             <option value="ocr_sched" <% if @ocr_filter=="ocr_sched" %>selected<%end%> >OCR Scheduled</option>
             <option value="ocr_done" <% if @ocr_filter=="ocr_done" %>selected<%end%> >OCR Complete</option>
+            <option value="ocr_ingest" <% if @ocr_filter=="ocr_ingest" %>selected<%end%> >OCR Ingested</option>
             <option value="ocr_error" <% if @ocr_filter=="ocr_error" %>selected<%end%> >OCR Errors</option>
          </select>
       </p>
