--- a/app/views/dashboard/_queue_status.html.erb
+++ b/app/views/dashboard/_queue_status.html.erb
@@ -14,6 +14,10 @@
          <td><span id="postprocess-jobs"><%= @queue_status[:postprocess] %></span></td>
       </tr>
       <tr>
+         <td class="summary-label">Ingested:</td>
+         <td><span id="ingested-jobs"><%= @queue_status[:done] %></span></td>
+      </tr>
+      <tr>
          <td class="summary-label">Failed:</td>
          <td><span id="failed-jobs"><%= @queue_status[:failed] %></span></td>
       </tr>
