Add support for the additional status, ingested errors

--- a/app/views/dashboard/_filter.html.erb
+++ b/app/views/dashboard/_filter.html.erb
@@ -15,6 +15,7 @@
             <option value="ocr_done" <% if @ocr_filter=="ocr_done" %>selected<%end%> >OCR Complete</option>
             <option value="ocr_ingest" <% if @ocr_filter=="ocr_ingest" %>selected<%end%> >OCR Ingested</option>
             <option value="ocr_error" <% if @ocr_filter=="ocr_error" %>selected<%end%> >OCR Errors</option>
+            <option value="ocr_ingest_error" <% if @ocr_filter=="ocr_ingest_error" %>selected<%end%> >OCR Ingest Errors</option>
          </select>
       </p>
       <p>
